--- a/index.html
+++ b/index.html
@@ -60,15 +60,17 @@
       </h2>
     </section>
 
+    <div id="example-work"></div>
+
     <section class="section section--alignCentered section--description">
       <div class="section__exampleWrapper">
         <div class="section__example">
           <img alt="example screenshot of a project involving code"
                class="section__exampleImage"
-               src="images/example1.png"/>
+               src="images/example2.png"/>
           <dl class="color--cloud">
             <dt class="section__exampleTitle section__text--centered">
-              NextGen MDM Implementation
+              Data Architecture
             </dt>
             <dd></dd>
           </dl>
@@ -84,7 +86,7 @@
                https://www.flickr.com/photos/ssoosay/4097410999 -->
           <dl class="color--cloud">
             <dt class="section__exampleTitle section__text--centered ">
-              Teradata PDCR to S3 Migration
+              Migrating to Cloud
             </dt>
             <dd></dd>
           </dl>
@@ -95,12 +97,12 @@
         <div class="section__example">
           <img alt="example screenshot of a project involving cats"
                class="section__exampleImage"
-               src="images/example3.png"/>
+               src="images/example2.png"/>
           <!-- “Bengal cat” by roberto shabs is licensed under CC BY 2.0
                https://www.flickr.com/photos/37287295@N00/2540855181 -->
           <dl class="color--cloud">
             <dt class="section__exampleTitle section__text--centered">
-              System Owner: Data Integeration platforms
+              Systems Integration & Platform management
             </dt>
             <dd></dd>
           </dl>
@@ -119,6 +121,7 @@
         I am dedicated and curious change agent exploring in the cloud! I like to work hard and learn new things.
         I have 13 years of overall experience in IT Field and passioanate about all aspects of data management.
         I want to work for a company that will pay me to code in the cloud!
+        As a Hobby, I like travelling the paths less beaten and I am working on improving my off-road driving skills.
       </p>
 
     <div class="background--skyBlue modal--closed">
