--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <section class="section section--alignCentered section--description">
       <p class="color--darkgrey section__description">
         I am dedicated and curious change agent exploring in the cloud! I like to work hard and learn new things.
-        I have 13 years of overall experience in IT Field and passioanate about all aspects of data management.
+        I have 13 years of overall experience in IT Field and passionate about all aspects of data management.
         I want to work for a company that will pay me to code in the cloud!
         As a Hobby, I like travelling the paths less beaten and I am working on improving my off-road driving skills.
       </p>
